<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:layout_margin="10dp">

    <TableRow android:layout_marginTop="50dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_margin="12dp"
            android:text="@string/login_na" />

        <EditText
            android:id="@+id/user"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/login_name"/>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_margin="12dp"
            android:text="@string/login_pas" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/login_password"/>
    </TableRow>



    <TableRow android:layout_margin="12dp">
        <CheckBox
            android:id="@+id/remember"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_height="wrap_content"
            android:text="Remeber Me" />
    </TableRow>

    <LinearLayout android:layout_marginTop="12dp">


        <Button
            android:id="@+id/register"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:background="#00CED1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:background="#00CED1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="@string/login" />

    </LinearLayout>

</TableLayout>
